cabal-version:      3.4
name:               hgeometry-kernel
version:            1.0.0.0
synopsis:           The core Geometry types used in HGeometry
description:
  The core Geometry types (e.g. lines, line segments, planes, balls,
  boxes etc.) used in HGeometry.

homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:
    README.md
    changelog.txt
-- extra-source-files:
data-dir: data
data-files:
    -- test-with-ipe/**/*.ipe

tested-with:
    GHC == 9.12.2
  -- , GHC == 9.10.1
  -- , GHC == 9.8.2

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------

common all-setup
    ghc-options: -O2 -fspecialise-aggressively -fexpose-all-unfoldings
                 -Wall
                 -fno-warn-unticked-promoted-constructors
                 -fno-warn-type-defaults
                 -fno-warn-partial-type-signatures
                 -Werror=missing-methods

    build-depends:
        base                      >= 4.16.1        && < 5
      , hgeometry-combinatorial   >= 1             && < 1.1
      , hgeometry-vector          >= 1             && < 1.1
      , hgeometry-point           >= 1             && < 1.1
      , hiraffe                   >= 0.1           && < 1
      -- , containers                >= 0.6           && < 1
      -- , nonempty-containers       >= 0.3.4.5       && < 0.4
      -- , monoidal-containers       >= 0.6.6         && < 0.7
      -- , fingertree                >= 0.1.5         && < 0.2
      -- , dlist                     >= 0.7           && < 1.1
      -- , bytestring                >= 0.11          && < 1
      -- , vector:vector             >= 0.13          && < 1
      -- , array                     >= 0.5           && < 1
      , lens                      >= 5.2           && < 6
      , deepseq                   >= 1.1           && < 2
      , semigroupoids             >= 6.0.0.2       && < 7
      -- , foldable1-classes-compat  >= 0.1           && < 1
      -- , semigroups                >= 0.18          && < 1
      , random                    >= 1.3           && < 2
      -- , witherable                >= 0.4           && < 1
      , linear                    >= 1.21          && < 2
      -- , data-clist                >= 0.2           && < 1
      -- , aeson                     >= 2.1           && < 3
      -- , nonempty-vector           >= 0.2           && < 1
      -- , mtl                       >= 2.2           && < 3
      , data-default              >= 0.8           && < 1
      -- , MonadRandom               >= 0.5           && < 1
      -- , reflection                >= 2.1.7         && < 3
      -- , filepath                  >= 1.4.100       && < 2
      -- , file-io                   >= 0.1           && < 1
      -- , indexed-traversable       >= 0.1.3         && < 1
      -- , vector-builder            >= 0.3.8         && < 1
      -- -- , HsYAML                    >= 0.2           && < 1
      , semialign                 >= 1.3           && < 1.4
      -- , these                     >= 1.0.1         && < 1.3
      -- , subcategories             >= 0.2           && < 0.3

      -- , ghc-typelits-natnormalise >= 0.9           && < 0.10
      -- , ghc-typelits-knownnat     >= 0.8.2         && < 0.9

      -- , entropy                   >= 0.4.1.10      && < 0.5
      -- , pretty-simple             >= 4.1.2.0       && < 5


    default-language: GHC2024

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , PartialTypeSignatures

common doctest
    build-depends:
      , doctest                    >= 0.8      && < 1

common all-quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hgeometry-kernel
      , hgeometry-combinatorial:quickcheck
      , hgeometry-vector:quickcheck
      , hgeometry-point:quickcheck
      , hspec                           >= 2.9     && < 3
      , QuickCheck                      >= 2.10    && < 3
      , quickcheck-instances            >= 0.3     && < 1
      , approximate-equality            >= 1.1.0.2 && < 1.2

common quickcheck-setup
    build-depends:
        hgeometry-kernel:quickcheck

--------------------------------------------------------------------------------
-- * Libraries
--------------------------------------------------------------------------------
--------------------------------------------------------------------------------
-- * HGeometry Kernel

library
    import: all-setup
    hs-source-dirs: src
    exposed-modules:
        HGeometry.Kernel

        HGeometry.Matrix
        HGeometry.Matrix.Class

        HGeometry.Line
        HGeometry.Line.Class
        HGeometry.Line.PointAndVector

        HGeometry.Line.General
        HGeometry.Line.LineEQ
        HGeometry.Line.NonVertical.Class

        HGeometry.HyperPlane
        HGeometry.HyperPlane.Class
        HGeometry.HyperPlane.NonVertical
        HGeometry.HyperPlane.Intersection

        HGeometry.Duality

        HGeometry.HalfSpace
        HGeometry.HalfSpace.Class
        HGeometry.HalfLine

        -- HGeometry.HalfPlane

        HGeometry.Box
        HGeometry.Box.Class
        HGeometry.Box.Boxable

    -- --
    -- --    HGeometry.SoS.Point
    -- --    HGeometry.SoS.Orientation
    -- --    HGeometry.SoS.Determinant
    -- --
        HGeometry.Interval
        HGeometry.Interval.Class
        HGeometry.Interval.EndPoint

        HGeometry.Boundary

        HGeometry.LineSegment
        HGeometry.LineSegment.Class
        HGeometry.LineSegment.PossiblyDegenerate

        HGeometry.Intersection

        HGeometry.Plane

        HGeometry.Triangle
        HGeometry.Triangle.Class

        HGeometry.Ball
        HGeometry.Ball.Class
        HGeometry.Ball.CenterAndRadius
        HGeometry.Ball.Diametral
        HGeometry.Ball.BoundaryPoints

        HGeometry.Transformation

        HGeometry.Direction
        HGeometry.Direction.Cardinal
        HGeometry.Disk

        HGeometry.Viewport

        HGeometry.Ellipse


    other-modules:
        HGeometry.Line.Intersection
        HGeometry.Box.Internal
        HGeometry.Box.Corners
        HGeometry.Box.Sides
        HGeometry.Box.Intersection

        HGeometry.HalfSpace.Type

        HGeometry.HyperPlane.Internal
        HGeometry.Matrix.Internal
        HGeometry.Matrix.ByRows
        HGeometry.Transformation.Internal

        HGeometry.LineSegment.Internal
        HGeometry.LineSegment.Intersection

        HGeometry.Interval.HalfOpen
        HGeometry.Interval.Internal


library quickcheck
    import: all-setup, all-quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Kernel.Instances
      HGeometry.Kernel.Test.Box

--------------------------------------------------------------------------------
-- * Test Suites
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- ** HGeometry-Kernel

test-suite hspec
  import:           all-setup, all-quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Point2Spec
      HGeometry.Line.PointAndVectorSpec
      HGeometry.Line.GeneralSpec
      HGeometry.LineSegmentSpec
      HGeometry.BallSpec
      HGeometry.BoxSpec
      HGeometry.MatrixSpec
      HGeometry.HalfSpaceSpec
      HGeometry.HyperPlaneSpec
      HGeometry.IntervalSpec
      HGeometry.TriangleSpec

  hs-source-dirs: test
  build-depends:
      hgeometry-kernel:quickcheck

test-suite doctest
    import:           all-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

--------------------------------------------------------------------------------
-- * Benchmarks
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- ** HGeometry Benchmarks

-- common bench-setup
--   build-depends:
--       tasty-bench           >= 0.3  && < 1
--     , hgeometry
--     , deepseq-generics      >= 0.2  && < 1
--     , hashable              >= 1.4  && < 2
--     -- , hgeometry:numtypes

-- benchmark benchmarks
--   import: all-setup, hgeometry-setup, bench-setup
--   hs-source-dirs: bench
--   main-is:        Benchmarks.hs
--   type: exitcode-stdio-1.0
--   other-modules:
--     ConvexHull.Bench
--     ConvexHull.GrahamBench
--     ConvexHull.GrahamV2
--     ConvexHull.GrahamInt
--     ConvexHull.GrahamFastest
--     -- ConvexHull.GrahamClassy
--     Util
