cabal-version:      3.4
name:               hgeometry-point
version:            1.0.0.0
synopsis:
        d-dimensional Points
description:
        d-dimensional Points with an optimized vector representation.
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-source-files:  README.md
                     changelog
                     changelog.org
-- extra-source-files:

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                    >= 4.16.1.0      && < 5
      , hgeometry-combinatorial >= 1.0.0.0       && < 2
      , hgeometry-vector        >= 1.0.0.0       && < 2
      , containers              >= 0.6           && < 1
      , vector                  >= 0.13          && < 1
      , lens                    >= 5.2           && < 6
      , deepseq                 >= 1.1           && < 2
      , semigroupoids           >= 5             && < 7
      , semigroups              >= 0.18          && < 1
      , random                  >= 1.2           && < 2
      , witherable              >= 0.4           && < 1
      , linear                  >= 1.21          && < 2
      , data-clist              >= 0.2           && < 1
      , data-default-class      >= 0.1           && < 1

      -- , semialign               ^>= 1.2       && <
      -- , these                   ^>= 1.1       && <

      , ghc-typelits-natnormalise >= 0.7.7       && < 1
      , ghc-typelits-knownnat     >= 0.7.6       && < 1

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , QuickCheck              >= 2.10
      , quickcheck-instances
      , hgeometry-point
      , hgeometry-vector:quickcheck

--------------------------------------------------------------------------------
-- * Main Library

library
    import:           setup
    hs-source-dirs:   src
    exposed-modules:
       HGeometry.Point
       HGeometry.Point.Class
       HGeometry.Point.PointF
       HGeometry.Point.EuclideanDistance
       HGeometry.Point.Orientation
      -- HGeometry.Point.Affine

    -- reexported-modules:
    --     HGeometry.Point.Unpacked
    --   , HGeometry.Point.Class
    --   , HGeometry.Point.PointF

    other-modules:
        HGeometry.Point.Type
        HGeometry.Point.Orientation.Degenerate
        HGeometry.Point.Quadrants


    -- other-extensions:

--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Point.Instances
    build-depends:
         hgeometry-point

--------------------------------------------------------------------------------
-- * Tests stup

test-suite hgeometry-point-hspec
  import:           setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
      Spec
      Point2Spec
      PointSpec
      PointSpec
      Point.CmpAround
  build-depends:
      hgeometry-point:quickcheck

test-suite hgeometry-point-doctest
    import:           setup, quickcheck-setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest             >= 0.8
