name:                hgeometry-svg
version:             0.9.0.0
synopsis:            Writing geometric primitives from HGeometry as SVG Files
description:
    Writing geometric primitives from HGeometry as SVG Files.

homepage:            https://fstaals.net/software/hgeometry
license:             BSD3
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
-- copyright:

tested-with:         GHC >= 8.2

category:            Geometry
build-type:          Simple

data-files:
                     -- in the future (cabal >=2.4) we can use
                     -- examples/**/*.in
                     -- examples/**/*.out

extra-source-files:  README.md
                     changelog.org

Extra-doc-files:
                     -- docs/**/*.png

cabal-version:       2.0
source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

library
  ghc-options: -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults

  exposed-modules:
                  Data.Geometry.Svg
                  Data.Geometry.Svg.MathCoordinateSystem
                  Data.Geometry.Svg.Writer

  -- other-extensions:
  build-depends:
                base                     >= 4.11      &&     < 5
              , hgeometry                >= 0.9.0.0
              , hgeometry-combinatorial  >= 0.9.0.0
              , hgeometry-ipe            >= 0.9.0.0
              , bytestring               >= 0.10
              , lens                     >= 4.2
              , semigroups               >= 0.18
              , deepseq                  >= 1.1
              , vinyl                    >= 0.10
              , semigroupoids            >= 5
              , singletons               >= 2.0
              , blaze-svg                >= 0.3.6
              , blaze-markup             >= 0.8
              , text                     >= 1.1.1.0

              , QuickCheck
              -- , bifunctors       >= 4.1
              -- , containers       >= 0.5.5
              -- , dlist            >= 0.7
              -- , contravariant    >= 1.4
              -- , profunctors      >= 5.2.1
              -- , linear           >= 1.10



              -- , colour           >= 2.3.3

              , template-haskell


  hs-source-dirs: src
                  -- examples/demo

  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric
                    , AutoDeriveTypeable


                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: base
               , doctest             >= 0.8
--               , doctest-discover

  default-language:    Haskell2010
