cabal-version:      3.4
name:               hgeometry-svg
version:            1.0.0.0
synopsis:            Geometric Algorithms, Data structures, and Data types.
description:
  HGeometry provides some basic geometry types, and geometric algorithms and
  data structures for them. The main two focusses are: (1) Strong type safety,
  and (2) implementations of geometric algorithms and data structures with good
  asymptotic running time guarantees. Note that HGeometry is still highly experimental, don't be surprised to find bugs.

homepage:            https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1


source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                      >= 4.16.1.0      && < 5
      , hgeometry-combinatorial   >= 1.0.0.0       && < 2
      , hgeometry-vector          >= 1.0.0.0       && < 2
      , hgeometry-point           >= 1.0.0.0       && < 2
      , hgeometry-kernel          >= 1.0.0.0       && < 2
      , hgeometry-ipe             >= 1.0.0.0       && < 2
      , hgeometry                 >= 1.0.0.0       && < 2
      , hiraffe                   >= 0.1           && < 1
      , containers                >= 0.6           && < 1
      , vector                    >= 0.13          && < 1
      , lens                      >= 5.2           && < 6
      , deepseq                   >= 1.1           && < 2
      , semigroupoids             >= 5             && < 7
      , foldable1-classes-compat  >= 0.1           && < 1
      , semigroups                >= 0.18          && < 1
      , random                    >= 1.2           && < 2
      , witherable                >= 0.4           && < 1
      , linear                    >= 1.21          && < 2
      , data-clist                >= 0.2           && < 1
      , miso                      >= 1.8           && < 2
      , lucid                     >= 2             && < 3
      , lucid-svg                 >= 0.7           && < 1
      , colour                    >= 2.3.6         && < 3
      , singletons                >= 3.0           && < 4
      , vinyl                     >= 0.14          && < 1
      , text                      >= 2.0           && < 3
      , bytestring                >= 0.11          && < 1
      , file-io                   >= 0.1           && < 1
      , filepath                  >= 1.4.100       && < 2

      , ghc-typelits-natnormalise >= 0.7.7         && < 1
      , ghc-typelits-knownnat     >= 0.7.6         && < 1

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , QuickCheck              >= 2.10
      , quickcheck-instances
      , hgeometry-svg

--------------------------------------------------------------------------------
-- * Main Library

library
    import:           setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry.Svg

        HGeometry.Miso.Svg
        HGeometry.Miso.OrphanInstances
--        HGeometry

        -- HGeometry.Polygon.Class

--        HGeometry.Polygon.Simple
--        HGeometry.Polygon.Simple.Class
--
--        HGeometry.Polygon.Convex
--        HGeometry.Polygon.Convex.Class

--        HGeometry.PolyLine
--        HGeometry.PolyLine.Class
--
--        HGeometry.ConvexHull
--        HGeometry.ConvexHull.GrahamScan
--
--        HGeometry.BezierSpline

    other-modules:
        HGeometry.Miso.Svg.Writer
--        HGeometry.Polygon.Simple.Implementation
--        HGeometry.Polygon.Convex.Implementation

        Miso.String.Util

    -- other-extensions:

--------------------------------------------------------------------------------
-- * Helper Libraries

-- library quickcheck
--     import: setup, quickcheck-setup
--     visibility: public
--     hs-source-dirs: src-quickcheck
--     exposed-modules:
--       HGeometry.Point.Instances
--     build-depends:
--          hgeometry

--------------------------------------------------------------------------------
-- * Tests stup

test-suite hgeometry-svg-hspec
  import:           setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
  hs-source-dirs:   test
